static/styles.css
/* Mobile-first!! */

/*****Sticky footer*****/
* {
    margin: 0;
}

.wrapper{
    min-height: 100%;
    height: auto !important;
    height: 100%;
    margin: 0 auto -5em;
}

footer, .push {
    height: 5em;
}
/***** End sticky footer *****/

html, body{ 
    font-family: Lato, Candara, Helvetica; 
    background-color: pink;
    height:100%;
}

.subbody {
    padding: 3%;
}
header nav a {
    font-family: "Noticia Text";
    font-size: 17px;
    text-decoration: none;
    color: white;
    padding: 5px 10px 5px 10px;
}

nav a:hover {
    color: black;
    background-color: white;
    text-decoration: none;
    border-radius: 2px;
}

nav a.active{
    color: black;
    background-color: white;
    border-radius: 2px;
    font-weight: bold;
}

header nav{
    text-align: center !important;
    background-color: black;
    color: black;
    width: 100%;
    /*top: 0;*/
    z-index: 50; /*Keep on top at all times*/
} 

.glyphicon.glyphicon-menu-hamburger{
    color: white;
    font-size: 20px;    
    text-align: left;
}

.jumbotron {
    margin: 0;
    background: url("bkg_img.png") center top 15%;
    width: 100%;
    height: 30vh;
    background-size: cover;
    position: relative;
}

/* "Alissa Chan" text */
.jumbotron h1 {
    text-align: center;
    padding-top: 30px;
    color: #FFFFFF;
    font-family: "Noticia Text";
    min-width: 10vw;
}

footer {
    padding-left: 2%;
    padding-right: 2%;
    /*position: absolute;*/
    bottom: 0;
    background-color: black;
    color: white;
}


.social-media i {  
    color:white;
    padding: 0 5px 0px 5px;
}

/*Desirable design blog icon*/
#ddblog {
    max-height: 25px;
    position: relative;
    bottom: 7px;
    left: 3px;
}

/*Back to top button*/
.btn.btn-info{
    position: fixed;
    right: 10px;
    bottom: 10px;
    width: 30px;
    height: 30px;
    text-align: center;
    padding: 4px 0;
    font-size: 18px;
    border-radius: 15px;
}

/********* MEDIA QUERIES *********/
/* Breakpoints obtained from https://responsivedesign.is/develop/browser-feature-support/media-queries-for-common-device-breakpoints */

@media only screen and (max-width:353px){ 
    /*Hide lightbox on mobile*/
    #twcLightbox {
        display:none;
    }
}

/*Large phones*/ 
/*Set at 354px to fix blog carousel width issue*/
@media only screen and (min-width:354px){ 
    .carousel.slide {
        max-width: 354px;
    }
    #twcLightbox{
        display:none;
    }
}


/* Tablets & Small laptops */
@media only screen and (min-width: 768px){
    body { 
        background: #D2F3FF; /*light blue*/
        text-align: center;
    }
    .subbody{
        max-width:75%;
        padding: 2%; 
        margin: 0 auto;
        text-align: left;
    }
    .carousel.slide {
        display:none;
    }
    #twcLightbox{
        display:visible;
    }
}

/* Desktops and laptops */
@media screen and (min-width:1024px) {
    .jumbotron img{ 
        max-height: 35vh;
    }

    /*#navcollapse>li {
        text-align: center;
    }*/

    body { 
        background: beige; 
    }

    .subbody{
        max-width:75%;
        padding: 2%; 
        margin: 0 auto;
        text-align: left;
    }

    .img-responsive {
        max-height: 50vh;
        height: auto;
        overflow: hidden;
    }
    
    .social-media i:hover { 
        color: cyan; 
    }

    #ddblog:hover{
        background-color: #CCFFFF;
    }

    footer a:hover{
        color: #CCFFFF;
    }

    /*Hide blog page carousel on desktop*/
    .carousel.slide {
        display:none;
    }
    
    /*Lightbox styling on desktop*/
    /*.modal-dialog {
        width:60%;
        height: auto;
    }*/

    .thumbnail {
        margin-bottom:5px;
    }
}

